--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "dependencies/oh-my-zsh"]
 	path = dependencies/oh-my-zsh
 	url = https://github.com/robbyrussell/oh-my-zsh.git
+[submodule "dependencies/asdf"]
+	path = dependencies/asdf
+	url = https://github.com/asdf-vm/asdf.git
