Add neovim configuration

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "dependencies/asdf"]
 	path = dependencies/asdf
 	url = https://github.com/asdf-vm/asdf.git
+[submodule "dependencies/vim-plug"]
+	path = dependencies/vim-plug
+	url = https://github.com/junegunn/vim-plug.git
