--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -17,7 +17,7 @@
     ~/.oh-my-zsh: dependencies/oh-my-zsh/
     ~/.config/nvim: nvim
     ~/.config/nvim/autoload/plug.vim: dependencies/vim-plug/plug.vim
-    #~/.tmux.conf: tmux.conf
+    ~/.tmux.conf: tmux.conf
     #~/.vim: vim
     #~/.vimrc: vimrc
 
