--- a/tmux.conf
+++ b/tmux.conf
@@ -70,25 +70,20 @@ set -g status-left '#[fg=colour235,bg=colour76,bold] #S '
 #set -g status-utf8 on  #Commented out via https://github.com/tmux/tmux/issues/230
 
 set -g status-justify centre
-set -g status-bg black
+set -g status-style bg=black
 
 set -g status-left "#[fg=green]#S #[fg=yellow]#I #[fg=cyan]#P"
 set -g status-right "#[fg=cyan]%b %d #[fg=yellow]|#[fg=cyan]%l:%M %p"
 
-setw -g window-status-bell-attr default
-setw -g window-status-bell-fg red
-setw -g window-status-activity-attr bold
+setw -g window-status-bell-style fg=red
+setw -g window-status-activity-style bold
 
 setw -g window-status-format "#[fg=cyan]• #[fg=white]#I#[fg=cyan] #[fg=white]#12W"
 setw -g window-status-current-format "#[fg=red]▶ #[fg=white]#I#[fg=red,bold] #[fg=white]#W"
 
-set -g pane-border-fg colour238
-set -g pane-border-bg black
-set -g pane-active-border-fg white
-set -g pane-active-border-bg black
+set -g pane-border-style fg=colour238,bg=black
+set -g pane-active-border-style fg=white,bg=black
 
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
+set -g message-style fg=white,bg=black,bright
 
 if-shell '[[ -e ~/.tmux.conf.local ]]' 'source-file ~/.tmux.conf.local'
