--- a/tmux.conf
+++ b/tmux.conf
@@ -64,16 +64,16 @@ set-option -g terminal-overrides 'xterm*:XT:Ms=\E]52;%p1%s;%p2%s\007:Cc=\E]12;%p
 
 # Better project name in status bar
 set -g status-left-length 18
-set -g status-left '#[fg=colour235,bg=colour76,bold] #S '
+set -g status-left '#[fg=colour235,bg=colour75,bold] #S '
 
 # Cosmetics
 #set -g status-utf8 on  #Commented out via https://github.com/tmux/tmux/issues/230
 
 set -g status-justify centre
-set -g status-style bg=black
+set -g status-style bg=blue
 
-set -g status-left "#[fg=green]#S #[fg=yellow]#I #[fg=cyan]#P"
-set -g status-right "#[fg=cyan]%b %d #[fg=yellow]|#[fg=cyan]%l:%M %p"
+set -g status-left "#[fg=white]#S #[fg=orange]#I #[fg=lightgray]#P"
+set -g status-right "#[fg=white]%b %d #[fg=white]|#[fg=white]%l:%M %p"
 
 setw -g window-status-bell-style fg=red
 setw -g window-status-activity-style bold
@@ -81,8 +81,8 @@ setw -g window-status-activity-style bold
 setw -g window-status-format "#[fg=cyan]• #[fg=white]#I#[fg=cyan] #[fg=white]#12W"
 setw -g window-status-current-format "#[fg=red]▶ #[fg=white]#I#[fg=red,bold] #[fg=white]#W"
 
-set -g pane-border-style fg=colour238,bg=black
-set -g pane-active-border-style fg=white,bg=black
+set -g pane-border-style fg=colour238,bg=white
+set -g pane-active-border-style fg=black,bg=white
 
 set -g message-style fg=white,bg=black,bright
 
